tests/ui/resolve/crate-called-as-function.edition2018.stderr
error[E0425]: cannot find crate `foo` in the list of imported crates
  --> $DIR/crate-called-as-function.rs:6:7
   |
LL |     ::foo()
   |       ^^^ not found in the list of imported crates

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
